Se suben metadatas creadas visualmente

--- a/force-app/main/default/lwc/fullCalendar/fullCalendar.html
+++ b/force-app/main/default/lwc/fullCalendar/fullCalendar.html
@@ -26,14 +26,14 @@
         </div>
         <div class="slds-col slds-size_3-of-12">
             <div class="slds-button-group" role="group">
-                <button class="slds-button slds-button_icon" onclick={today} style="margin-right:1em">
+                <!--<button class="slds-button slds-button_icon" onclick={today} style="margin-right:1em">
                     <lightning-icon icon-name="standard:today" alternative-text="Today" size="small">
                     </lightning-icon>
-                </button>
-                <button class="slds-button slds-button_icon" onclick={listViewHandler}>
+                </button>-->
+               <!-- <button class="slds-button slds-button_icon" onclick={listViewHandler}>
                     <lightning-icon icon-name="utility:list" alternative-text="List View" size="small">
                     </lightning-icon>
-                </button>
+                </button>-->
                 <button class="slds-button slds-button_icon" onclick={dailyViewHandler}>
                     <lightning-icon icon-name="utility:dayview" alternative-text="Day view" size="small">
                     </lightning-icon>
@@ -42,10 +42,10 @@
                     <lightning-icon icon-name="utility:weeklyview" alternative-text="Weekly View" size="small">
                     </lightning-icon>
                 </button>
-                <button class="slds-button slds-button_icon" onclick={monthlyViewHandler}>
+                <!--<button class="slds-button slds-button_icon" onclick={monthlyViewHandler}>
                     <lightning-icon icon-name="utility:monthlyview" alternative-text="Monthly View" size="small">
                     </lightning-icon>
-                </button>
+                </button>-->
             </div>
         </div>
     </div>
